--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -1,4 +1,3 @@
-
 body{
     margin: 0;
     font-family: "Raleway", sans-serif;
@@ -7,11 +6,6 @@ body{
  
 .bg-orinoco {
     background: #f3e9f1;
-}
-.container{
-    width: 100%;
-    max-width: 1350px;
-    margin: auto;
 }
  
 *{
@@ -23,49 +17,50 @@ a{
     color: black;
 }
 
-
-/*header*/
- 
-
-
-/*main*/
-
-.bears {
-    display: flex;
-}
-
 h1{
     text-align: center;
     font-size: 19px;
     margin: 0;
 }
 
-.cards{
-    height: auto;    
-}
-
-.cards a{
-    display: flex;
-    padding: 8px;
-    height: 100%;
-}
-
-.cards img{
+.card {
     width: 300px;
-    padding: 8px;
+    display: flex;
+    flex-direction: column;
+    margin: 20px;
 }
 
-.details{
-    padding: 10px;
+.card-img-top{
+    height: 150px;
+    display: flex;
+    flex-direction: column;
+}
+
+.col {
+    display: inline-block;
+}
+
+.main__produit {
+    justify-content: center;
+    display: flex;
+    flex-direction: column;
     text-align: center;
 }
 
-h2{
-    margin: 0;
+.produit {
+    justify-content: center;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
 }
 
-p{
-    margin: 0;
+.produit__img {
+    display: flex;
+    width: 300px;
+    justify-content: center;
+    margin-left: 635px;
 }
 
-
+.article__img {
+    width: 300px;
+}
